# chatterbox

./: .editorconfig  .env.backup  .env.example  .env.orig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  hacs.json  migration-chatterbox.sh  plan.md  pyproject.toml  requirements-dev.txt  requirements.txt  session_20260118_162753.md  session_20260118_190142.md  session_20260118_190254.md  session_20260118_193436.md  session_20260118_225611.md  summary.md  test_results.txt
.beads/: .gitignore  config.yaml  issues.jsonl  metadata.json
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl  labels.jsonl
backend/src/: agent.py  cli.py  client.py  main.py  observability.py  server.py
backend/tests/: test_server.py
cackle/: __init__.py  agent.py  config.py  observability.py
cackle/audio/: __init__.py
cackle/config/: __init__.py
cackle/services/: __init__.py  stt.py  tts.py
cackle/tools/: __init__.py  registry.py
custom_components/chatterbox/: __init__.py  config_flow.py  const.py  conversation.py  manifest.json  strings.json
demos/: direct_agent.py  piper_demo.py  wyoming_client_test.py  wyoming_server.py
dev_notes/: EPIC2_EPIC5_IMPLEMENTATION_SUMMARY.md  EPIC5_PHASE2_COMPLETION.md  EPIC_1_READY_FOR_TESTING.md  EPIC_1_TESTING_CHECKLIST.md  EPIC_1_TEST_PLAN.md  aider_commandline_equivalents.md  mellona-config-integration.md
dev_notes/changes/: 2026-01-18_08-29-36_wyoming-tester-integration.md  2026-01-18_13-56-56_pydantic-type-annotations-fix.md  2026-01-18_14-20-15_runner-script-implementation.md  2026-01-18_14-35-00_wyoming-satellite-emulation-fix.md  2026-01-18_22-59-11_wyoming-protocol-integration-commit.md  2026-01-18_aider-config-migration.md  2026-01-19_01-30-fix-claude-executor-model-handling.md  2026-01-19_16-45-00_tts_stt_implementation_completion.md  2026-02-01_12-00-00_bootstrap-integration-complete.md  2026-02-13_epic-1-ocr-validator-improvements.md  2026-02-19_05-44-53_task-3-6-whisper-stt-validation.md  2026-02-19_06-10-06_task-3.7-validate-piper-tts-service.md  2026-02-19_07-11-00_epic3-task3.5-validation-framework-tests.md  2026-02-19_07-32-51_task-3-8-round-trip-integration-testing.md  2026-02-19_08-35-56_task-3-8-1-asyncio-fix-longform-stt.md  2026-02-19_09-00-00_epic3-task3.1-wyoming-protocol-research.md  2026-02-19_11-00-00_epic3-task3.2-ha-emulator-architecture.md  2026-02-19_12-00-00_task-3-9-epic-3-documentation-package.md  2026-02-19_13-00-00_epic3-task3.3-test-wave-corpus.md  2026-02-19_15-00-00_epic3-task3.4-ha-emulator-core.md  2026-02-19_16-45-00_task-3.10-epic-3-sign-off.md  2026-02-20_00-15-36_task-4.1-ha-conversation-flow-research.md  2026-02-20_00-20-16_task-4.2-agentic-framework-evaluation.md  (+17 more)
docs/: README.md  WHISPER_STREAMING_MODEL.md  adapters.md  agentic-framework-evaluation.md  agentic-loop-state-machine.md  agentic-loop.md  architecture.md  chatterbox-plan.md  context-management-research.md  context-retrieval-guide.md  conversation-flows.md  definition-of-done.md  epic-1-project-plan.md  epic5-context-persistence-proposal.md  epics-plan.md  ha-conversation-flow.md  ha-emulator-architecture.md  ha-integration-guide.md  ha-settings-schema.md  hacs-setup.md  implementation-reference.md  mandatory.md  mellona-config-example.yaml  mellona-migration-notes.md  mellona-provider-reference.md  mellona-stt-tts-integration.md  mellona-weather-integration-guide.md  persistence-api-guide.md  persistent-storage-architecture.md  quickstart.md  serial-logger-systemd.md  serial-logging-schema.md  setting-up-esphome.md  stt_tts_services.md  task-6.20-manual-verification-checklist.md  templates.md  testing-infrastructure.md  testing-wyoming.md  tool-development.md  tools.md  (+2 more)
examples/: direct_agent.py  wyoming_client_test.py  wyoming_server.py
firmware/: DEBUG_GUIDE.md  OTA_QUICKSTART.md  OTA_SECURITY.md  README.md  secrets.example.yaml  secrets.yaml.example  voice-assistant.yaml
planning/: 2026-01-18_08-12-15_wyoming-satellite-emulator-plan.md  2026-01-18_08-12-15_wyoming-satellite-emulator-summary.md  2026-01-18_14-30-00_wyoming-satellite-emulation-fix-summary.md  2026-01-18_21-00-00_approach-a-batch-processing-enhancement-plan.md  2026-01-18_21-15-00_migrate-aider-config-to-commandline-plan.md  2026-01-18_22-52-run-server-restart-fix-plan.md  2026-02-13_10-00-00_epic-1-ota-and-foundation-project-plan-plan.md  2026-02-19_05-44-53_task-3-6-validate-whisper-stt-service-summary.md  2026-02-20_00-20-16_task-4.2-agentic-framework-evaluation-summary.md  2026-03-24_clarifications-summary-plan.md  2026-03-24_epic-10-continuous-conversation-wake-word-plan.md  2026-03-24_epic-11-reliability-llm-fallback-plan.md  2026-03-24_epic-7-recording-pcm-streaming-plan.md  2026-03-24_epic-8-receiving-audio-playback-plan.md  2026-03-24_epic-9-touchscreen-integration-plan.md  2026-03-25_epic-5-6-implementation-status-plan.md  2026-03-25_epic-6-ha-integration-addendum-plan.md  2026-03-25_epic2-phase2-assessment-plan.md  master-plan-plan.md
scripts/: OCR_VALIDATE_README.md  OTA_DEPLOY_README.md  chat-demo.sh  devices.example.csv  devices.example.json  env-smoke-test.py  ocr_validate.py  ota_deploy.py  piper_demo.py  run-server.sh  watch_firmware.sh
src/: __init__.py  agent.py  main.py  server.py  tools.py
tests/: __init__.py  conftest.py  test_ha_emulator.py  test_piper_demo.py  test_server.py  test_wyoming_tester.py
tmp/: prompt-01.md
wyoming_tester/: README.md  __init__.py  cli.py  protocol.py  pyproject.toml
(+132 files in other folders)
